--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=3000
 SECRET=secretmessage
+DB_URL=mongodb+srv://admin:adminadmin@cluster0.ba2wc.mongodb.net/issuesDatabase?retryWrites=true&w=majority
